--- a/ugly_youtube/gui/templates/index.html
+++ b/ugly_youtube/gui/templates/index.html
@@ -4,7 +4,7 @@
     <div style="text-align: center;">
         {% for video in videos %}    
             <h2>{{ video.title }}</h2>
-            <iframe src="{{ video.get_embed_url() }}" width=600 height=400></iframe>
+            <iframe src="{{ video.get_embed_url() }}" width=600 height=400 allowfullscreen></iframe>
         {% endfor %}
     </div>
 {% endblock %}
