--- a/ugly_youtube/gui/templates/index.html
+++ b/ugly_youtube/gui/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %} 
     <div style="text-align: center;">
         {% for video in videos %}    
-            <h2>{{ video.title }}</h2>
+            <h2>{{ video.get_watch_url() }}</h2>
             <iframe src="{{ video.get_embed_url() }}" width=600 height=400 allowfullscreen></iframe>
         {% endfor %}
     </div>
