new style, new look

--- a/ugly_youtube/gui/templates/base.html
+++ b/ugly_youtube/gui/templates/base.html
@@ -3,19 +3,22 @@
     <head>
         <title>Ugly Youtube</title>
         <meta charset="utf-8">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     </head>
     <body>
-
-        <form method="post">
-            <div>
-                <input type="text" placeholder="type here..." name="query" value="{{ query }}">
-                <button type="submit">search</button>
-                <label for="max_results">max number of results</label>
-                <input type="number" name="max_results" min="1" max="50" value="{{ max_results }}">
+        <nav class="navbar bg-danger fixed-top">
+            <div class="container-fluid">
+                <a class="navbar-brand text-light" href="#">ugly YouTube</a>
+                <form method="post" class="d-flex" role="search">
+                    <input type="text" class="form-control me-2" placeholder="Search" name="query" value="{{ query }}">
+                    <button class="btn btn-outline-light me-2" type="submit">Search</button>
+                </form>
             </div>
-        </form>
+        </nav>
 
-        {% block content %}
-        {% endblock %}
+        <div class="container">
+            {% block content %}
+            {% endblock %}
+        </div>
     </body>
 </html>
